--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     
     <main>
         <section class="hero">
-            <h1>Ignacio</h1>
-            <h2>Full Stack Developer</h2>
-            <p>Building secure, scalable web applications with modern technologies</p>
+            <h1>OpenBSD Notes</h1>
+            <h2>Building secure, scalable web applications with modern technologies</h2>
         </section>
+
         
         <section class="tech-stack">
             <h3>Technology Stack</h3>
