--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- ======================================
-         HEADER
+         SITE HEADER
          ====================================== -->
     <header class="site-header">
         <div class="header-container">
@@ -47,7 +47,7 @@
         <section class="projects-preview">
             <h3>Featured Projects</h3>
             <div class="project-cards">
-                
+
                 <div class="project-card">
                     <h4>OpenBSD Learning Journey</h4>
                     <p>Documentation and tutorials for OpenBSD administration</p>
